--- a/alacritty.yml
+++ b/alacritty.yml
@@ -9,20 +9,18 @@ env:
 
 window:
   dimensions:
-    # columns: 90
-    # lines: 45
-    columns: 42
-    lines: 13
+    columns: 90
+    lines: 45
+      # columns: 42
+      # lines: 13
 
   padding:
     x: 2
     y: 2
 
   dynamic_padding: false
-  decorations: buttonless
-  opacity: 0.0
-  # opacity: 0.64
-
+  decorations: none
+  opacity: 0.64
 
 scrolling:
   history: 10000
@@ -30,18 +28,18 @@ scrolling:
 
 font:
   normal:
-    family: "DejaVu Sans Mono for Powerline"
-    style: Book
+    family: "MesloLGS NF"
+    style: Regular
 
   bold:
-    family: "DejaVu Sans Mono for Powerline"
+    family: "MesloLGS NF"
     style: Bold
 
   italic:
-    family: "DejaVu Sans Mono for Powerline"
-    style: Oblique
+    family: "MesloLGS NF"
+    style: Italic
 
-  size: 14.0
+  size: 11.0
 
   offset:
     x: 0
@@ -57,7 +55,7 @@ font:
 ## If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-## Colors (Solarized dark)
+## Colors (peppermint)
 colors:
   bright:
     black: '#535353'
@@ -81,7 +79,7 @@ colors:
     white: '#b4b4b4'
     yellow: '#dab853'
   primary:
-    # background: '#000000'
+    background: '#041217'
     foreground: '#c8c8c8'
   selection:
     background: '#e6e6e6'
@@ -105,10 +103,9 @@ cursor:
   blink_interval: 750
 
 shell:
-  program: /bin/zsh
+  program: /usr/bin/zsh
   args:
-    - -c
-    - "/opt/homebrew/bin/tty-clock -C 6 -cB && exec zsh -l"
+    - --login
 
 ## Key bindings
 ##
@@ -205,22 +202,25 @@ key_bindings:
  - { key: B,          mods: command,  chars: "\x3a\x4e\x45\x52\x44\x54\x72\x65\x65\x54\x6f\x67\x67\x6c\x65\x0A"}
  - { key: U,          mods: command,  command: {program: "sh", args: ["-c", "~/bin/toggle_alacritty_opacitty"]}}
 
-
- # (macOS only)
- # - { key: Key0,   mods: Command, action: ResetFontSize    }
- # - { key: Equals, mods: Command, action: IncreaseFontSize }
- # - { key: Minus,  mods: Command, action: DecreaseFontSize }
- # - { key: K,      mods: Command, action: ClearHistory     }
- # - { key: K,      mods: Command, chars: "\x0c"            }
- # - { key: V,      mods: Command, action: Paste            }
- # - { key: C,      mods: Command, action: Copy             }
+ - { key: Minus,  mods: Control, chars: "\x1f"            }
+ - { key: Plus,   mods: Control, action: None             }
+ - { key: Key0,   mods: Command, action: ResetFontSize    }
+ - { key: Equals, mods: Command, action: IncreaseFontSize }
+ - { key: Minus,  mods: Command, action: DecreaseFontSize }
+ - { key: K,      mods: Command, action: ClearHistory     }
+ - { key: K,      mods: Command, chars: "\x0c"            }
+ - { key: V,      mods: Command, action: Paste            }
+ - { key: C,      mods: Command, action: Copy             }
  # - { key: H,      mods: Command, action: Hide             }
- # - { key: Q,      mods: Command, action: Quit             }
- # - { key: W,      mods: Command, action: Quit             }
- # - { key: N,      mods: Command, action: CreateNewWindow  }
- # - { key: Copy, action: Copy }
- # - { key: L, mods: Control, action: ClearLogNotice }
- # - { key: L, mods: Control, chars: "\x0c" }
+ - { key: Q,      mods: Command, action: Quit             }
+ - { key: W,      mods: Command, action: Quit             }
+ - { key: N,      mods: Command, action: CreateNewWindow  }
+ - { key: T,      mods: Command, action: CreateNewWindow  }
+ - { key: Copy, action: Copy }
+ - { key: L, mods: Control, action: ClearLogNotice }
+ - { key: L, mods: Control, chars: "\x0c" }
+
+ - { key: Return,      mods: Command, action: ToggleFullscreen}
  # - { key: Home, chars: "\x1bOH", mode: AppCursor }
  # - { key: Home, chars: "\x1b[H", mode: ~AppCursor }
  # - { key: End, chars: "\x1bOF", mode: AppCursor }
