tmux.conf: vim-copy-mode

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,3 +25,17 @@ bind H resize-pane -L 5
 bind L resize-pane -R 5
 bind J resize-pane -D 5
 bind K resize-pane -U 5
+
+# vim copy mode
+setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
+bind P menu \
+"enter pswd: test123"       1   "send-keys test123 enter" \
+"enter pswd: test456"       2   "send-keys test234 enter" \
+"enter pswd: test789"       3   "send-keys test789 enter" \
+"print env info"            p   "send-keys 'python printEnvInfo.py' enter" \
+"echo hello world"          e   "send-keys 'echo hello world' enter"
