--- a/alacritty.toml
+++ b/alacritty.toml
@@ -49,7 +49,7 @@ save_to_clipboard = false
 [window]
 decorations = "buttonless"
 dynamic_padding = false
-opacity = 0.5
+opacity = 0.70
 blur = true
 option_as_alt = "both"
 
@@ -65,4 +65,4 @@ y = 2
 size = 14.0
 
 [font.normal]
-family = "MesloLGS NF"
+family = "MesloLGS Nerd Font"
