--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,19 @@
 set -g default-terminal "xterm-256color"
+set -g mouse on
 
-source ~/.config/tmux/lightline_theme
+if-shell "[ -f ~/.config/tmux/lightline_theme ]" "source ~/.config/tmux/lightline_theme"
 
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind r source ~/.tmux.conf
+
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
+bind "\"" split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
-
-# enable mouse support for switching panes/windows
-set -g mouse on
 
 bind Left resize-pane -L 5
 bind Right resize-pane -R 5
@@ -30,12 +29,11 @@ bind K resize-pane -U 5
 setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
+setw -g automatic-rename-format "#{b:pane_current_path}\(#{pane_current_command}\)"
+
+bind R run-shell "tmux send-keys Escape ':qa!' Enter && sleep 0.05 && tmux send-keys 'vim .' Enter"
+
 bind P menu \
-"enter pswd: test123"       1   "send-keys test123 enter" \
-"enter pswd: test456"       2   "send-keys test234 enter" \
-"enter pswd: test789"       3   "send-keys test789 enter" \
-"print env info"            p   "send-keys 'python printEnvInfo.py' enter" \
-"echo hello world"          e   "send-keys 'echo hello world' enter"
+		 "echo hello world"          e   "send-keys 'echo hello world' enter"
