update tmux conf for real xterm-256color

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
 set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 set -g mouse on
 
 if-shell "[ -f ~/.config/tmux/lightline_theme ]" "source ~/.config/tmux/lightline_theme"
@@ -33,7 +35,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy
 
 setw -g automatic-rename-format "#{b:pane_current_path}\(#{pane_current_command}\)"
 
-bind R run-shell "tmux send-keys Escape ':qa!' Enter && sleep 0.05 && tmux send-keys 'vim .' Enter"
+bind R run-shell "tmux send-keys Escape ':qa!' Enter && sleep 0.1 && tmux send-keys 'vim .' Enter"
 
 bind P menu \
 		 "echo hello world"          e   "send-keys 'echo hello world' enter"
