--- a/tmux.conf
+++ b/tmux.conf
@@ -2,15 +2,23 @@ set -g default-terminal "xterm-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g mouse on
+set -g status-position top
+set -g status-keys emacs
 
-if-shell "[ -f ~/.config/tmux/lightline_theme ]" "source ~/.config/tmux/lightline_theme"
+set -gq allow-passthrough on
+set -g visual-activity off
 
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
 bind r source ~/.tmux.conf
+bind R run-shell "tmux send-keys Escape ':qa!' Enter && sleep 0.1 && tmux send-keys 'vim .' Enter"
+
+bind P menu \
+    "toggle status line"        s   "set status" \
+    "echo hello world"          e   "send-keys 'echo hello world' enter"
+
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
@@ -35,7 +43,35 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy
 
 setw -g automatic-rename-format "#{b:pane_current_path}\(#{pane_current_command}\)"
 
-bind R run-shell "tmux send-keys Escape ':qa!' Enter && sleep 0.1 && tmux send-keys 'vim .' Enter"
+set -g @plugin 'tmux-plugins/tpm'
 
-bind P menu \
-		 "echo hello world"          e   "send-keys 'echo hello world' enter"
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-show-powerline false
+# set -g @dracula-plugins "cpu-usage ram-usage battery time"
+set -g @dracula-plugins "cpu-usage ram-usage time"
+set -g @dracula-show-timezone false
+set -g @dracula-show-left-icon "#S"
+set -g @dracula-left-icon-padding 1
+set -g @dracula-battery-label false
+set -g @dracula-show-battery-status true
+set -g @dracula-battery-colors  "green gray"
+set -g @dracula-cpu-usage-label ""
+set -g @dracula-ram-usage-label "󰘚"
+
+set -g @dracula-colors "
+    white="#e1e2e3"
+    gray="#24272e"
+    dark_gray="#1c1e1f"
+    light_purple="#baa0f8"
+    dark_purple="#404256"
+    cyan="#78cee9"
+    green="#9cd57b"
+    orange="#f3a96a"
+    red="#f76c7c"
+    purple="#baa0f8"
+    pink="#ff6d7e"
+    yellow="#e3d367"
+"
+
+run '~/.tmux/plugins/tpm/tpm'
